// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon ECL markup - icon arrow-left renders correctly 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#arrow-left"
    />
  </svg>
</jest>
`;

exports[`Icon ECL markup - renders correctly with accessibility content 1`] = `
<jest>
  <svg
    aria-hidden="false"
    aria-labelledby="example-title example-desc"
    class="ecl-icon ecl-icon--m"
    focusable="false"
    role="img"
  >
    <title
      id="example-title"
    >
      Title
    </title>
    <desc
      id="example-desc"
    >
      Description
    </desc>
    <use
      xlink:href="/icons.svg#arrow-left"
    />
  </svg>
</jest>
`;

exports[`Icon ECL markup - renders correctly with extra attributes 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#arrow-left"
    />
  </svg>
</jest>
`;

exports[`Icon ECL markup - renders correctly with extra class names 1`] = `
<jest>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m custom-class custom-class--test"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#arrow-left"
    />
  </svg>
</jest>
`;

exports[`Icon WT markup - icon arrow-left renders correctly 1`] = `
<jest>
  <span
    aria-hidden="true"
    class="wt-icon--arrow-left wt-icon--m ecl-icon ecl-icon--m ecl-icon--arrow-left"
    focusable="false"
  />
</jest>
`;

exports[`Icon WT markup - renders correctly with accessibility content 1`] = `
<jest>
  <span
    aria-hidden="false"
    aria-labelledby="example-title example-desc"
    class="wt-icon--arrow-left wt-icon--m ecl-icon ecl-icon--m ecl-icon--arrow-left"
    focusable="false"
    role="img"
  />
</jest>
`;

exports[`Icon WT markup - renders correctly with extra attributes 1`] = `
<jest>
  <span
    aria-hidden="true"
    class="wt-icon--arrow-left wt-icon--m ecl-icon ecl-icon--m ecl-icon--arrow-left"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
    focusable="false"
  />
</jest>
`;

exports[`Icon WT markup - renders correctly with extra class names 1`] = `
<jest>
  <span
    aria-hidden="true"
    class="wt-icon--arrow-left wt-icon--m ecl-icon ecl-icon--m custom-class custom-class--test ecl-icon--arrow-left"
    focusable="false"
  />
</jest>
`;
